--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mocha": "~1.20.1",
     "browserify": "~4.2.0",
     "ljs": "~0.2.1",
+    "coveralls": "~2.10.1",
     "lodash": "~2.4.1"
   },
   "keywords": []
