--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     "benchmark": "~1.0.0",
     "rx": "~2.2.27",
     "baconjs": "~0.7.16",
-    "bacon.model": "~0.1.10"
+    "bacon.model": "~0.1.10",
+    "jsstana": "0.0.19",
+    "estraverse": "~1.5.0",
+    "esprima": "~1.2.2"
   },
   "keywords": [
     "data",
