--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "bacon.model": "~0.1.10",
     "jsstana": "0.0.19",
     "estraverse": "~1.5.0",
-    "esprima": "~1.2.2"
+    "esprima": "~1.2.2",
+    "sinon": "~1.10.2"
   },
   "keywords": [
     "data",
