--- a/package.json
+++ b/package.json
@@ -30,20 +30,20 @@
   },
   "devDependencies": {
     "uglify-js": "~2.4.14",
-    "typify-bin": "0.0.4",
+    "typify-bin": "0.0.5",
     "jshint": "~2.5.1",
     "istanbul": "~0.3.0",
-    "mocha": "~1.20.1",
-    "browserify": "~4.2.0",
+    "mocha": "~1.21.0",
+    "browserify": "~5.3.0",
     "ljs": "~0.2.3",
     "coveralls": "~2.11.0",
     "lodash": "~2.4.1",
     "chai": "~1.9.1",
     "benchmark": "~1.0.0",
-    "rx": "~2.2.27",
-    "baconjs": "~0.7.16",
-    "bacon.model": "~0.1.10",
-    "jsstana": "0.0.20",
+    "rx": "2.3.0",
+    "baconjs": "0.7.18",
+    "bacon.model": "0.1.10",
+    "jsstana": "0.0.21",
     "estraverse": "~1.5.0",
     "esprima": "~1.2.2",
     "sinon": "~1.10.2"
